:construction: Fix PersonalitySurvey, now contains ViewPager and save answers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,67 @@
     <!--    Personality Survey Screen-->
     <string name="title_personality_survey_start">¡Vamos, Inicia!</string>
 
-    <string name="personality_question_1">¿Te gusta leer libros o revistas científicas?</string>
     <string name="button_survey_yes">Si</string>
     <string name="button_survey_no">No</string>
+    <string name="personality_question_1">¿Te gustaría arreglar aparatos eléctricos?</string>
+    <string name="personality_question_2">¿Te gustaría reparar automóviles?</string>
+    <string name="personality_question_3">¿Te gustaría operar máquinas o equipos de motor?</string>
+    <string name="personality_question_4">¿Te gustaría construir cosas con madera?</string>
+    <string name="personality_question_5">¿Te gustaría trabajar al aire libre?</string>
+    <string name="personality_question_6">¿Te gustaría leer libros o revistas científicas?</string>
+    <string name="personality_question_7">¿Te gustaría trabajar en un laboratorio científico?</string>
+    <string name="personality_question_8">¿Te gustaría estudiar una teoría científica?</string>
+    <string name="personality_question_9">¿Te gustaría trabajar con productos químicos?</string>
+    <string name="personality_question_10">¿Te gustaría aplicar matemáticas a problemas prácticos?</string>
+    <string name="personality_question_11">¿Te gustaría trazar, dibujar o pintar?</string>
+    <string name="personality_question_12">¿Te gustaría diseñar muebles, ropa o carteles?</string>
+    <string name="personality_question_13">¿Te gustaría tocar algún instrumento musical?</string>
+    <string name="personality_question_14">¿Te gustaría pintar retratos o tomar fotografías?</string>
+    <string name="personality_question_15">¿Te gustaría escribir una novela o una obra de teatro?</string>
+    <string name="personality_question_16">¿Te gustaría trabajar para una obra de caridad?</string>
+    <string name="personality_question_17">¿Te gustaría ayudar a otros con sus problemas personales?</string>
+    <string name="personality_question_18">¿Te gustaría tomar un curso sobre relaciones humanas?</string>
+    <string name="personality_question_19">¿Te gustaría enseñar en una escuela?</string>
+    <string name="personality_question_20">¿Te gustaría trabajar como voluntario?</string>
+    <string name="personality_question_21">¿Te gustaría tener tu propio negocio?</string>
+    <string name="personality_question_22">¿Te gustaría tomar un curso de administración o liderazgo?</string>
+    <string name="personality_question_23">¿Te gustaría ser el director de un grupo?</string>
+    <string name="personality_question_24">¿Te gustaría supervisar el trabajo de otros?</string>
+    <string name="personality_question_25">¿Te gustaría participar en una campaña política?</string>
+    <string name="personality_question_26">¿Te gustaría trabajar en una oficina?</string>
+    <string name="personality_question_27">¿Te gustaría tomar un curso de contabilidad?</string>
+    <string name="personality_question_28">¿Te gustaría llevar un inventario?</string>
+    <string name="personality_question_29">¿Te gustaría llenar formularios o declaraciones de impuestos?</string>
+    <string name="personality_question_30">¿Te gustaría utilizar equipos de oficina?</string>
+    <string name="personality_question_31">¿Puedes hacer un dibujo a escala?</string>
+    <string name="personality_question_32">¿Puedes cambiar el aceite o la llanta de un auto?</string>
+    <string name="personality_question_33">¿Puedes reparar muebles?</string>
+    <string name="personality_question_34">¿Puedes hacer reparaciones de plomería sencillas?</string>
+    <string name="personality_question_35">¿Puedes pintar paredes de una casa?</string>
+    <string name="personality_question_36">¿Puedes interpretar fórmulas químicas?</string>
+    <string name="personality_question_37">¿Puedes escribir un informe científico?</string>
+    <string name="personality_question_38">¿Puedes describir la función de los glóbulos blancos?</string>
+    <string name="personality_question_39">¿Puedes usar el álgebra para resolver problemas matemáticos?</string>
+    <string name="personality_question_40">¿Puedes realizar un experimento científico?</string>
+    <string name="personality_question_41">¿Puedes arreglar o componer música?</string>
+    <string name="personality_question_42">¿Puedes pintar, usar acuarelas o hacer esculturas?</string>
+    <string name="personality_question_43">¿Puedes cantar?</string>
+    <string name="personality_question_44">¿Puedes tocar un instrumento musical?</string>
+    <string name="personality_question_45">¿Eres bueno escribiendo cuentos o poesía?</string>
+    <string name="personality_question_46">¿Eres bueno explicando cosas a otras personas?</string>
+    <string name="personality_question_47">¿Las personas te buscan para contarte sus preocupaciones?</string>
+    <string name="personality_question_48">¿Eres bueno enseñando a otros?</string>
+    <string name="personality_question_49">¿Trabajas mejor con personas que con cosas o ideas?</string>
+    <string name="personality_question_50">¿Se te hace fácil hablar con todo tipo de personas?</string>
+    <string name="personality_question_51">¿Soy bueno(a) hablando en público?</string>
+    <string name="personality_question_52">¿Eres buen vendedor o vendedora?</string>
+    <string name="personality_question_53">¿Puedes llegar a ser muy persuasivo(a)?</string>
+    <string name="personality_question_54">¿Tienes destrezas para liderar?</string>
+    <string name="personality_question_55">¿Eres una persona ambiciosa y asertiva?</string>
+    <string name="personality_question_56">¿Puedes realizar actividades rutinarias de oficina?</string>
+    <string name="personality_question_57">¿Eres una persona cuidadosa y ordenada?</string>
+    <string name="personality_question_58">¿Te gusta realizar acciones de archivo?</string>
+    <string name="personality_question_59">¿Puedes realizar registros contables, débitos y créditos?</string>
+    <string name="personality_question_60">¿Puedes realizar registros de pagos o ventas?</string>
+
 </resources>
