:construction: Add user preference questions, fragments and view pager activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,12 @@
     <string name="study_question_1">¿Cuál es tu nivel de estudios?</string>
     <string name="motivation_question_1">¿Cuál es tu motivación para estudiar?</string>
     <string name="motivation_placeholder">Ingresa una palabra</string>
+    <string name="program_type_question">¿Qué tipo de programa del Sena deseas estudiar?</string>
+    <string name="program_modality_question">¿Cuál es la modalidad de estudio que prefieres?</string>
+    <string name="study_area_question">¿Cuál es tú área de estudio preferida?</string>
+    <string name="city_question">¿En cuál ciudad deseas realizar tus estudios?</string>
+    <string name="mobility_question">¿Tienes posibilidades de desplazarte a otra ciudad para estudiar?</string>
+    <string name="time_availability_question">¿Cuál es tu disponibilidad horaria?</string>
     <string name="title_activity_customer_fragments">CustomerFragments</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
